add general changes

--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@
 
     </section>
 
-    <footer class="bg-dark text-center text-light p-4">
-        <p class="mb-0">Nicolás Carrasco 2023. Todos los derechos reservados.</p>
+    <footer class="bg-dark text-center p-4">
+        <p class="mb-0 text-light">Nicolás Carrasco 2023. Todos los derechos reservados.</p>
     </footer>
 
 
